# monty-cpython-pypy-template

./: .azure-pipelines.yml  .bumpversion.cfg  .env  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-tests.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
